--- a/force-app/main/default/aura/CustomThemLayoutNoNavigation/CustomThemLayoutNoNavigation.cmp
+++ b/force-app/main/default/aura/CustomThemLayoutNoNavigation/CustomThemLayoutNoNavigation.cmp
@@ -3,12 +3,11 @@
  -->
 
 <aura:component description="CustomThemLayoutNoNavigation" implements="forceCommunity:themeLayout" extends="c:CheckLanguage">
+    <ltng:require styles="{!join(',', $Resource.rr_community_css, $Resource.proximanova + '/proximanova.css')}"
+                  scripts="{!join(',', $Resource.rr_community_js)}" afterScriptsLoaded="{!c.doInit}"/>
 
     <!-- attributes: -->
     <aura:attribute name="mode" type="String"/>
-
-    <!-- handlers: -->
-    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
 
     <aura:if isTrue="{!v.languageChecked}">
