--- a/force-app/main/default/aura/StudyDetailView/StudyDetailView.css
+++ b/force-app/main/default/aura/StudyDetailView/StudyDetailView.css
@@ -103,6 +103,11 @@
     font-weight: bold;
 }
 
+.THIS .share-btn-label{
+    color: #297DFD;
+    text-align: center;
+}
+
 .THIS .sd-tab.disabled{
     background-color: #FFFFFF;
     pointer-events: none;
@@ -234,6 +239,21 @@
     visibility: hidden;
 }
 
+.THIS .share-icons{
+    display: flex;
+}
+
+.THIS .share-ico{
+    margin: 0 8px;
+    cursor: pointer;
+
+}
+
+.THIS .share-ico .rr-icon-default{
+    width: 20px!important;
+    height: 20px!important;
+}
+
 @media (max-width: 768px){
     .THIS .sdv-top-bar .links .apollo-btn.text{
         font-size: 13px;
@@ -260,6 +280,7 @@
 }
 
 .THIS .actions-buttons{
+    margin-top: 4px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
