--- a/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
+++ b/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
@@ -67,7 +67,7 @@
                     </div>
                     <div class="{!'collapse-section ' + if(v.detailCollapsed, '', ' opened')}">
                         <c:RRCollapse label="{!$Label.c.PE_Details}" isCollapsed="{!v.detailCollapsed}">
-                            <aura:if isTrue="{!v.userMode == 'HCP'}">
+                            <aura:if isTrue="{!and(v.userMode == 'HCP',!empty(v.pe.Referral_ID__c))}">
                                 <div class="vpi-refid-field">
                                     <div class="label">{!$Label.c.PE_Referral_Id}</div>
                                     <div class="value">{!v.pe.Referral_ID__c}</div>
