Replace Is_Virtual_Study_Site__c to Study_Site_Type__c field in Study Site object

--- a/unpackaged/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
@@ -177,10 +177,6 @@
                 <behavior>Readonly</behavior>
                 <field>Referral__c</field>
             </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Is_Virtual_Study_Site__c</field>
-            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
@@ -287,7 +283,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h1I000002zie3</masterLabel>
+        <masterLabel>00h4E000000nx6F</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
