--- a/force-app/main/default/layouts/Therapeutic_Area__c-SiteCore Condition of Interests.layout-meta.xml
+++ b/force-app/main/default/layouts/Therapeutic_Area__c-SiteCore Condition of Interests.layout-meta.xml
@@ -11,10 +11,6 @@
                 <behavior>Required</behavior>
                 <field>Name</field>
             </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Therapeutic_Area__c</field>
-            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -59,7 +55,7 @@
     </layoutSections>
     <relatedLists>
         <fields>NAME</fields>
-        <relatedList>CTC__c.COI_3rdParty__c</relatedList>
+        <relatedList>CTC__c.COI__c</relatedList>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
@@ -67,7 +63,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h9E000000qUSb</masterLabel>
+        <masterLabel>00h9E000000rHFv</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
