--- a/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
+++ b/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="slvi-objective-section">
-                    <div class="objective-text">{!v.currentStudy.trial.Detailed_Description__c}</div>
+                    <div class="objective-text">{!v.currentStudy.trial.Brief_Summary__c}</div>
                     <div class="objective-link">
                         <c:RRLink page="{!'study-workspace?id=' + v.currentStudy.trial.Id}">{!$Label.c.BTN_Learn_More}
                             <c:RRIcon iconName="icon-chevron-right"/>
