--- a/force-app/main/default/pages/RRChangePassword.page
+++ b/force-app/main/default/pages/RRChangePassword.page
@@ -11,6 +11,8 @@
     <apex:includeScript value="{!$Resource.svg4everybody}"/>
     <apex:includeScript value="{!$Resource.jquery224}"/>
     <apex:includeScript value="{!$Resource.rr_community_js}"/>
+
+
     <style>
         .all-content{
             height: 100%;
@@ -255,7 +257,6 @@
             svg4everybody();
 
         });
-
     </script>
 
 
@@ -368,7 +369,12 @@
                     <div class="cp-logo-block">
                         <div class="cp-login-title">{!$Label.BTN_Reset_Password}</div>
                         <!--div class="cp-info-title">This site is optimized for Google Chrome and Safari. You may experience navigation issues with other browsers.</div-->
-                        <img src="{!$Resource.rr_community_icons + '/logo_3x.png'}" class="cp-main-logo"/>
+                        <apex:outputPanel rendered="{!isParticipant}">
+                            <img src="{!$Resource.PH_logo + '/Patient_Portal_Logo.svg'}" class="cp-main-logo"/>
+                        </apex:outputPanel>
+                        <apex:outputPanel rendered="{!!isParticipant}">
+                            <img src="{!$Resource.rr_community_icons + '/Referral_Hub_Logo.svg'}" class="cp-main-logo"/>
+                        </apex:outputPanel>
                     </div>
                     <div class="cp-body-content">
                         <div class="cp-body-components">
@@ -394,7 +400,12 @@
         <apex:outputPanel id="test" rendered="{!contact.Is_First_Logon__c && browserLanguage != null}" styleClass="rr-all-content">
             <div class="rr-header-content">
                 <div class="rr-width-limiter side-padding header-block">
-                    <img src="{!$Resource.rr_community_icons + '/logo_3x.png'}" class="logo-block"/>
+                    <apex:outputPanel rendered="{!isParticipant}">
+                        <img src="{!$Resource.PH_logo + '/Patient_Portal_Logo.svg'}" class="logo-block"/>
+                    </apex:outputPanel>
+                    <apex:outputPanel rendered="{!!isParticipant}">
+                        <img src="{!$Resource.rr_community_icons + '/Referral_Hub_Logo.svg'}" class="logo-block"/>
+                    </apex:outputPanel>
                 </div>
             </div>
             <div class="rr-header-margin"/>
