--- a/force-app/main/default/aura/CustomThemLayoutNoNavigation/CustomThemLayoutNoNavigation.cmp
+++ b/force-app/main/default/aura/CustomThemLayoutNoNavigation/CustomThemLayoutNoNavigation.cmp
@@ -17,10 +17,10 @@
                 <div class="rr-width-limiter side-padding header-block">
                     <div class="logo-click" onclick="{!c.doGoHome}">
                         <!--c:MySVG xlinkHref="{!$Resource.rr_community_icons + '/logo.svg#full-logo'}" class="logo-block"/-->
-                        <aura:if isTrue="{!or(v.mode == 'Participant', v.mode == 'Delegate')}">
-                            <img src="{!$Resource.PH_logo + '/Logo@3x.png'}" class="logo-block"/>
+                        <aura:if isTrue="{!v.mode == 'Participant'}">
+                            <img src="{!$Resource.PH_logo + '/Patient_Portal_Logo.svg'}" class="logo-block"/>
                             <aura:set attribute="else">
-                                <img src="{!$Resource.rr_community_icons + '/logo_3x.png'}" class="logo-block"/>
+                                <img src="{!$Resource.rr_community_icons + '/Referral_Hub_Logo.svg'}" class="logo-block"/>
                             </aura:set>
                         </aura:if>
                     </div>
