Fix pagination wrong selected value

--- a/force-app/main/default/aura/StudyListView/StudyListView.cmp
+++ b/force-app/main/default/aura/StudyListView/StudyListView.cmp
@@ -87,7 +87,8 @@
                                 class="{! !v.isSearchResume ? 'slds-hide' : ''}"/>
                     <c:rrSelect value="{!v.filterData.therapeuticArea}"
                                 options="{!v.filterData.therapeuticAreas}"
-                                placeholder=""/>
+                                placeholder=""
+                                setValueAsSelected="true"/>
                 </c:FilterPanel>
             </div>
 
