--- a/force-app/main/default/layouts/Therapeutic_Area__c-SiteCore Condition of Interests.layout-meta.xml
+++ b/force-app/main/default/layouts/Therapeutic_Area__c-SiteCore Condition of Interests.layout-meta.xml
@@ -55,7 +55,7 @@
     </layoutSections>
     <relatedLists>
         <fields>NAME</fields>
-        <relatedList>CTC__c.COI__c</relatedList>
+        <relatedList>CTC__c.COI_3rdParty__c</relatedList>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
