--- a/force-app/main/default/components/EmailActionBtnText.component
+++ b/force-app/main/default/components/EmailActionBtnText.component
@@ -2,9 +2,10 @@
  - Created by Leonid Bartenev
  -->
 
-<apex:component id="EmailActionBtnText" access="global">
+<apex:component id="EmailActionBtnText" access="global" controller="EmailActionBtnController">
     <apex:attribute name="buttonLabel" type="String" description="" access="global"/>
     <apex:attribute name="buttonURL" type="String" description="" access="global"/>
+    <apex:attribute name="autoInsertCommunityURL" type="Boolean" description="" default="false" access="global" />
 
-    {!buttonLabel}: {!if(buttonURL == null, $Label.CommunityURL, buttonURL)}
+    {!buttonLabel}: {!if (autoInsertCommunityURL, if(buttonURL == null, communityURL, communityURL + buttonURL), if(buttonURL == null, $Label.CommunityURL, buttonURL))}
 </apex:component>
