--- a/force-app/main/default/aura/Popup/Popup.cmp
+++ b/force-app/main/default/aura/Popup/Popup.cmp
@@ -16,6 +16,7 @@
     <aura:attribute name="showHeader" type="Boolean" default="{!true}"/>
     <aura:attribute name="showFooter" type="Boolean" default="{!true}"/>
     <aura:attribute name="showClose" type="Boolean" default="{!true}"/>
+    <aura:attribute name="showScroll" type="Boolean" default="{!false}"/>
 
     <aura:attribute name="primaryButtonClicked" type="Boolean" default="false" description="if primary(Ok) button clicked, this value will change"/>
     <aura:attribute name="secondaryButtonClicked" type="Boolean" default="false" description="if secondary(cancel) button clicked, this value will change"/>
@@ -44,7 +45,7 @@
                 </div>
                 <div style="position: relative">
                     <!-- dialog body: -->
-                    <div class="p-content">
+                    <div class="{!'p-content'+ if(v.showScroll,' with-scroll','')}">
                         <label>{!v.headerText}</label>
                         {!v.body}
                         <label>{!v.footerText}</label>
