--- a/force-app/main/default/aura/StudyDetailView/StudyDetailView.cmp
+++ b/force-app/main/default/aura/StudyDetailView/StudyDetailView.cmp
@@ -71,7 +71,7 @@
                                 <c:RRNPathItem label="{!$Label.c.PG_RW_Title}"/>
                             </c:RRNavigationPath>
                             <div class="rr-width-limiter">
-                                <img class="contrast-logo" src="{!$Resource.PH_logo + '/iqvia.jpg'}"/>
+                                <img class="contrast-logo" src="{!$Resource.PH_logo + '/iqvia.png'}"/>
                             </div>
                         </aura:if>
                     </aura:if>
