--- a/force-app/main/default/aura/ParticipantCardHeader/ParticipantCardHeader.cmp
+++ b/force-app/main/default/aura/ParticipantCardHeader/ParticipantCardHeader.cmp
@@ -17,7 +17,7 @@
                 </div>
                 <div class="sponsor-name">{!v.pe.Study_Site__r.Clinical_Trial_Profile__r.Study_Sponsor__c}</div>
                 <div class="objective-section">
-                    <div class="objective-text">{!v.pe.Study_Site__r.Clinical_Trial_Profile__r.Detailed_Description__c}</div>
+                    <div class="objective-text">{!v.pe.Study_Site__r.Clinical_Trial_Profile__r.Brief_Summary__c}</div>
                     <div class="objective-link">
                         <c:RRLink page="{!'study-workspace?id=' + v.pe.Study_Site__r.Clinical_Trial_Profile__c}">{!$Label.c.BTN_Learn_More}<c:RRIcon iconName="icon-chevron-right"/></c:RRLink>
                     </div>
